--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,7 @@ body{
 .box-shadow-custom{
   box-shadow: 0 2px 2px -3px grey !important;
 }
+
+.list-custom{
+  list-style-type: none !important;
+}
