React Styling: CSS, Styled Components, SVG - Assignment 3.1

--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -1,4 +1,4 @@
-.navbar-custom {
+.navbarCustom {
     background: #ffffff;
     transition: width 0.25s ease;
     -webkit-transition: width 0.25s ease;
