--- a/src/App.module.css
+++ b/src/App.module.css
@@ -45,12 +45,12 @@ body{
   background: #efe9e9;   
 }
 
-.sub-header {
-  margin-bottom: 0;
+.subHeader {
+  padding-bottom: 10px !important;
   border-bottom: 1px solid rgba(33,40,50,.125);
 }
 
-.sub-header span{
+.subHeader span{
   float: left;
   padding-left: 10px;
   padding-right: 10px;
@@ -58,7 +58,7 @@ body{
   font-weight: 700;
 }
 
-.main-content *{
+.mainContent *{
   float: left;
   padding-left: 10px;
   padding-right: 10px;
